tests/ui/traits/next-solver/diagnostics/point-at-failing-nested.stderr
error[E0277]: the trait bound `(): Foo` is not satisfied
  --> $DIR/point-at-failing-nested.rs:22:17
   |
LL |     needs_foo::<()>();
   |                 ^^ the trait `Bar` is not implemented for `()`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/point-at-failing-nested.rs:4:1
   |
LL | trait Bar {}
   | ^^^^^^^^^
note: required for `()` to implement `Foo`
  --> $DIR/point-at-failing-nested.rs:9:12
   |
LL | impl<T, U> Foo for T
   |            ^^^     ^
...
LL |     U: Bar,
   |        --- unsatisfied trait bound introduced here
note: required by a bound in `needs_foo`
  --> $DIR/point-at-failing-nested.rs:20:17
   |
LL | fn needs_foo<T: Foo>() {}
   |                 ^^^ required by this bound in `needs_foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
